...
    <string name="no_location">No Location</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="header_patient_checkout_label">Patient</string>
    <string name="install">Install</string>

    <string name="button_ok">OK</string>
    <string name="button_go_back">Go Back</string>
    <string name="button_back">Back</string>
    <string name="button_save">Save</string>
    <string name="button_stay_here">Stay Here</string>
    <string name="button_logout">Logout</string>
    <string name="button_close">Close</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_cancel_changes">Clear All</string>
    <string name="button_continue">Continue</string>
    <string name="button_submit">Submit</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="product">Product</string>
    <string name="presentation">Presentation</string>
...
    <string name="patient_lookup_id">ID</string>
    <string name="patient_lookup_dob">DOB</string>
    <string name="patient_lookup_physician">PHYSICIAN</string>
    <string name="patient_lookup_administrator">ADMINISTERED BY</string>
    <string name="patient_lookup_site">SITE</string>
    <string name="patient_lookup_route">ROUTE</string>
    <string name="patient_checkout_complete_another">Check Out Another Patient</string>
    <string name="patient_checkout_complete">Checkout Complete</string>
    <string name="patient_checkout_complete_updated">Checkout Updated</string>
    <string name="patient_checkout_family_count">%d Check Outs</string>
    <string name="patient_parent_guardian_flu_shots">Check Out Other Family</string>
    <string name="patient_add_parent">Check Out Parent/Guardian</string>
    <string name="patient_select_month">MONTH</string>
...
    <string name="patient_edit_missing_payer_confirm">Confirm payer information for or tap to edit payer</string>
    <string name="patient_edit_missing_payer_select">Missing payer information for this patient. Select a payer to continue.</string>
    <string name="patient_edit_front_card">Front of Card</string>
    <string name="patient_edit_back_card">Back of Card</string>
    <string name="patient_edit_front_card_subtitle">Capture front of insurance card</string>
    <string name="patient_edit_back_card_subtitle">Capture back of insurance card</string>
    <string name="patient_edit_no_insurance_card">No Insurance Card</string>
    <string name="patient_edit_in_progress">Updating patient eligibility…</string>
    <string name="patient_edit_failed">Upload patient eligibility failed, please try again!</string>
    <string name="patient_edit_hold_card">Hold card in the center of the box</string>
    <string name="patient_edit_driver_license_note">Scan Driver’s License to input missing required patient information.</string>
    <string name="patient_edit_driver_license_tip">Scan the driver’s license bar code</string>
    <string name="patient_edit_driver_license_trouble">Having trouble scanning?</string>
...
    <string name="payer_info_insured_first">Insured First Name</string>
    <string name="payer_info_insured_last">Insured Last Name</string>
    <string name="payer_info_insured_dob">Insured Date of Birth</string>
    <string name="payer_info_insured_gender">Insured Gender</string>

    <string name="admin_fragment_vaxcare_admin_log_in">VaxCare Admin Login</string>
    <string name="admin_fragment_log_in">Log In</string>
    <string name="admin_fragment_no_partner_assigned">No Location Assignment</string>
    <string name="admin_fragment_enter_pin">Enter PIN</string>
    <string name="admin_fragment_password">Password</string>
    <string name="admin_fragment_invalid_credentials">Invalid Credentials</string>

    <string name="home_fragment_header_checkout_vaccines">Check Out Vaccines</string>
...
    <string name="admin_fragment_setting_up_vaxhub">Setting up VaxHub…</string>
    <string name="admin_fragment_clinic_information">Clinic Information</string>
    <string name="admin_fragment_next">Next</string>
    <string name="admin_fragment_setup_complete">Setup Complete</string>
    <string name="admin_fragment_setup_failed_error_message">Error: Unable to load information</string>
    <string name="admin_fragment_enter_new_x_id">Enter New %1$s ID</string>
    <string name="admin_fragment_enter_partner_id">Enter Partner ID</string>
    <string name="admin_fragment_enter_clinic_id">Enter Clinic ID</string>

    <string name="admin_fragment_header_vaxcare_admin">VaxCare Admin</string>
    <string name="admin_fragment_header_vaxcare_admin_login">VaxCare Admin Log In</string>
    <string name="admin_fragment_admin_edit_sub_header">Edit</string>
    <string name="admin_fragment_use_scanner">Use Scanner</string>
    <string name="admin_fragment_old_diagnostics">Old Diagnostics</string>
...
    <string name="prefix">prefix</string>
    <string name="line_number">Line number</string>
    <string name="all_done">All done!</string>
    <string name="permission_must_be_accepted">Permissions must be accepted in order to use the VaxHub application.</string>
    <string name="bridge_required_title">Missing VaxCare Bridge Application</string>
    <string name="bridge_required_message">Please install VaxCare’s Mobile Bridge application. Contact Customer Care for questions and troubleshooting.</string>
    <string name="retry">Retry</string>
    <string name="appointment_update_failed">Failed to get updated appointment information</string>
    <string name="error">Error</string>
    <string name="error_body">Unexpected Error, please try again!</string>
    <string name="acknowledge">Acknowledge</string>
    <string name="failed_to_sync">Failed To Sync</string>
    <string name="ordered">ORDERED</string>

    <string name="orders_unordered_dose_prompt_title">Unordered Dose</string>
    <string name="orders_unordered_dose_prompt_message">Checkout includes a dose that was not ordered in the EHR.\n\nDo you want to keep the dose?</string>
    <string name="orders_unordered_dose_prompt_yes">Yes, Keep Dose</string>
    <string name="orders_unordered_dose_prompt_no">No, Remove Dose</string>

    <string name="orders_review_doses">Review Doses</string>
    <string name="orders_review_header_title_unordered">Why were these doses dispensed?</string>
    <string name="orders_review_header_subtitle_unordered">Unordered doses have to be manually added to the EHR</string>
    <string name="orders_review_header_title_not_admin">Why were these orders not filled?</string>
...
