...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.vaxcare.vaxhub.core.view.VaxToolbar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/summary" />
...
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_vaccines"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_15"
        app:layout_constraintBottom_toTopOf="@id/layout_patient_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        tools:itemCount="4"
        tools:listitem="@layout/rv_checkout_vaccine_item" />

    <androidx.constraintlayout.widget.ConstraintLayout
...
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_patient_consent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
                android:layout_marginEnd="@dimen/dp_250"
                android:layout_marginBottom="@dimen/dp_250"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/checkout_btn"
                android:layout_width="@dimen/dp_300"
                android:layout_height="@dimen/dp_300"
                android:background="@drawable/bg_circle_button_primary_coral"
                android:scaleType="centerInside"
                android:src="@drawable/ic_checkout"
                app:layout_constraintStart_toEndOf="@id/anchor"
...
